deploy/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: httpserver-service
  labels:
    name: httpserver-service
spec:
  type: NodePort
  ports:
  - port: 8090        
    targetPort: http
    protocol: TCP
    nodePort: 32143
  selector:
    app: httpserver
